@@ -47,8 +47,7 @@ public class TestCsvDataLoader {
     CsvDataImporter edl = new CsvDataImporter(file);
     Collection<IDataRow> data = edl.getWith(new TafId("int", "TEst", "1"));
     assertEquals(1, data.size());
-    Vector<IDataRow> vData = new Vector<>();
-    vData.addAll(data);
+    Vector<IDataRow> vData = new Vector<>(data);
     assertEquals(TafString.class, vData.get(0).get("INTEGER").getClass());
     assertEquals(TafString.class, vData.get(0).get("double").getClass());
     assertEquals(TafString.class, vData.get(0).get("date").getClass());
@@ -61,10 +60,9 @@ public class TestCsvDataLoader {
     CsvDataImporter edl = new CsvDataImporter(file);
     Collection<IDataRow> data = edl.getWith(new TafId("int", "TEst", "2"));
     assertEquals(1, data.size());
-    Vector<IDataRow> vData = new Vector<>();
-    vData.addAll(data);
+    Vector<IDataRow> vData = new Vector<>(data);
     assertEquals(2, vData.get(0).get("INTEGER").asInteger().intValue());
-    assertEquals(new Double(2.2), vData.get(0).get("Double").asDouble());
+    assertEquals(Double.valueOf(2.2), vData.get(0).get("Double").asDouble());
     SimpleDateFormat sdf = new SimpleDateFormat("dd.MM.yyyy");
     try {
       System.out.println(vData.get(0).get("date").asDate());
@@ -83,8 +81,7 @@ public class TestCsvDataLoader {
         new File(getClass().getResource("TestCsvDataLoader.csv").toURI()));
     Collection<IDataRow> data = edl.getWith(new TafId("test", "othertest", ""));
     assertEquals(1, data.size());
-    Vector<IDataRow> vData = new Vector<>();
-    vData.addAll(data);
+    Vector<IDataRow> vData = new Vector<>(data);
     assertTrue(vData.get(0).get("INTEGER").isNull());
     assertTrue(vData.get(0).get("double").isSkip());
     assertTrue(vData.get(0).get("date").isEmpty());
@@ -98,8 +95,7 @@ public class TestCsvDataLoader {
     CsvDataImporter edl = new CsvDataImporter(file);
     Collection<IDataRow> data = edl.getWith(new TafId("test", "string", ""));
     assertEquals(1, data.size());
-    Vector<IDataRow> vData = new Vector<>();
-    vData.addAll(data);
+    Vector<IDataRow> vData = new Vector<>(data);
     assertTrue(vData.get(0).get("INTEGER") instanceof TafString);
     assertTrue(vData.get(0).get("double") instanceof TafString);
 
@@ -110,8 +106,7 @@ public class TestCsvDataLoader {
     CsvDataImporter edl = new CsvDataImporter(file);
     Collection<IDataRow> data = edl.getWith(new TafId("int", "TEst", ""));
     assertEquals(2, data.size());
-    Vector<IDataRow> vData = new Vector<>();
-    vData.addAll(data);
+    Vector<IDataRow> vData = new Vector<>(data);
     System.out.println(vData.get(0).getId().asIdDetailString());
     assertTrue(vData.get(0).getId().asIdDetailString().equalsIgnoreCase("test-1"));
     assertTrue(vData.get(1).getId().asIdDetailString().equalsIgnoreCase("test-2"));
